edu page updated

--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html>
-<link rel="icon" href="images/icon.ico">
-<title>Kuntal Samanta - Python, Django Professional</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
-</style>
+    <link rel="icon" href="images/icon.ico">
+    <title>Kuntal Samanta - Python, Django Professional</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+      html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
+    </style>
 <body class="w3-light-grey">
+
 
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
-
   <!-- The Grid -->
   <div class="w3-row-padding">
-  
     <!-- Left Column -->
     <div class="w3-third">
-    
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
           <img src="images/u2.jpg" style="width:100%" alt="Avatar">
@@ -48,15 +46,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-heart fa-fw w3-margin-right w3-text-teal"></i>About Me</b></p>
-            <span>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                It has survived not only five centuries, but also the leap into electronic typesetting,
-                remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset 
-                sheets containing Lorem Ipsum passages, and more recently with desktop publishing software 
-                like Aldus PageMaker including versions of Lorem Ipsum.
-            </span>
+              <blockquote>
+                  A Dedicated technical professional having <b style="color: black">2 Years 8 Months</b> of Informational
+                  Technology experience, committed to maintaining cutting edge technical skills and up-to-date industry
+                  knowledge. Seeking a position to utilize my skill & abilities in industry that offers professional growth
+                  while being resourceful innovative and flexible.
+                  Displayed and proved the capability to learn any new technology and work on it in a matter of a few
+                  days
+              </blockquote>
           <hr>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-sitemap fa-fw w3-margin-right w3-text-teal"></i>My Website</b></p>
@@ -64,14 +61,21 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                 <li>
                     <h6>
                       <a href="https://pyworld.pythonanywhere.com" target="_blank" style="text-decoration:none">
-                        <span style="color: teal">PyWorld</span>
+                        <span style="color: teal">My Profile <i class="fa fa-external-link fa-fw w3-margin-right"></i></span>
+                      </a>
+                    </h6>
+                </li>
+                <li>
+                    <h6>
+                      <a href="https://pyworld.pythonanywhere.com" target="_blank" style="text-decoration:none">
+                        <span style="color: teal">PyWorld <i class="fa fa-external-link fa-fw w3-margin-right"></i></span>
                       </a>
                     </h6>
                 </li>
                 <li>
                     <h6>
                       <a href="gallery.html" target="_blank" style="text-decoration:none">
-                        <span style="color: teal">Kuntal's Gallery</span>
+                        <span style="color: teal">Portfolio <i class="fa fa-external-link fa-fw w3-margin-right"></i></span>
                       </a>
                     </h6>
                 </li>
@@ -114,7 +118,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             </p>
 
             <hr>
-            <p class="w3-large w3-text-theme"><b><i class="fa fa-language fa-fw w3-margin-right w3-text-teal"></i>Languages Known</b></p>
+            <p class="w3-large w3-text-theme">
+              <b><i class="fa fa-language fa-fw w3-margin-right w3-text-teal"></i>Languages Known</b>
+            </p>
             <ol>
                 <li>
                     <p>English</p>
@@ -126,10 +132,29 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                     <p>Hindi</p>
                 </li>
             </ol>
+            <hr>
+
+            <p class="w3-large w3-text-theme">
+              <b><i class="fa fa-hand-o-right fa-fw w3-margin-right w3-text-teal"></i>Hobbies & Interest</b>
+            </p>
+            <ol>
+                <li>
+                    <p>Technology</p>
+                </li>
+                <li>
+                    <p>Travling</p>
+                </li>
+                <li>
+                    <p>Football</p>
+                </li>
+                <li>
+                    <p>Birds Watching</p>
+                </li>
+            </ol>
+            
           <br />
         </div>
       </div><br>
-
     <!-- End Left Column -->
     </div>
 
@@ -137,7 +162,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
     <!-- Right Column -->
     <div class="w3-twothird">
-
       <div class="w3-container w3-card w3-white">
         <h3 class="w3-text-grey w3-padding-16">
             <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Skill Set & Tools
@@ -157,7 +181,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       </div>
       <br />
 
-
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h3 class="w3-text-grey w3-padding-16">
           <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience
@@ -169,7 +192,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </h6>
           <p>
               <a href="company/cn.html" target="_blank" style="text-decoration:none">
-                <span style="color: teal">Click Here To See Contribution</span>
+                <span style="color: teal"><i class="fa fa-external-link fa-fw w3-margin-right"></i>Participation</span>
               </a>
           </p>
           <hr>
@@ -179,7 +202,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2019 - Feb 2020</h6>
             <p>
                 <a href="company/nat.html" target="_blank" style="text-decoration:none">
-                  <span style="color: teal">Click Here To See Contribution</span>
+                  <span style="color: teal"><i class="fa fa-external-link fa-fw w3-margin-right"></i>Participation</span>
                 </a>
             </p>
           <hr>
@@ -189,7 +212,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2017 - Nov 2019</h6>
             <p>
                 <a href="company/ets.html" target="_blank" style="text-decoration:none">
-                  <span style="color: teal">Click Here To See Contribution</span>
+                  <span style="color: teal"><i class="fa fa-external-link fa-fw w3-margin-right"></i>Participation</span>
                 </a>
             </p>
           <br />
@@ -217,8 +240,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5>Kishore Kona Nabagrami Adarsha Vidyalaya</h5>
           <p>Madhyamik [10th Level]</p>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010</h6>
-          <br>
         </div>
+        <p align="center">
+            <a href="education/edu.html" target="_blank" style="text-decoration:none">
+              <span style="color: teal">Eduction Details</span>
+            </a>
+        </p>
+        <br />
       </div>
       <br />
 
