major changes in profile

--- a/company/cn.html
+++ b/company/cn.html
@@ -30,7 +30,7 @@
                 <td>1</td>
                 <td>FindMyNearest</td>
                 <td>Python, Django</td>
-                <td>Postgresql</td>
+                <td>Postgres</td>
                 <td>
                     <p>
                         We have created one features for Realbuzz group which is basically find all the
@@ -45,7 +45,7 @@
                 <td>2</td>
                 <td>Brandcil Portal and Platform Development</td>
                 <td>Python, Django, Django Rest</td>
-                <td>Postgresql</td>
+                <td>Postgres</td>
                 <td>
                     <p>
                          Brandcil is a platform where User can post anything in Facebook, LinkedIn, Twitter
