--- a/company/ets.html
+++ b/company/ets.html
@@ -30,7 +30,7 @@
                 <td>1</td>
                 <td>CryptoPod Website</td>
                 <td>Python, Django</td>
-                <td>Postgresql</td>
+                <td>Postgres</td>
                 <td>
                     <p>
                         This is an interactive platform where you can discuss the latest crypto trends and
@@ -49,7 +49,7 @@
                 <td>2</td>
                 <td>VideoPriceSigns</td>
                 <td>Python, Django, Django Rest</td>
-                <td>Postgresql</td>
+                <td>Postgres</td>
                 <td>
                     <p>
                         It is a website which containing thousand of Videos which was developed by this
