--- a/company/nat.html
+++ b/company/nat.html
@@ -30,7 +30,7 @@
                 <td>1</td>
                 <td>YouTaxi Website APP Development</td>
                 <td>Python, Django, Django Rest</td>
-                <td>Postgresql</td>
+                <td>Postgres</td>
                 <td>
                     <p>
                         This App is same like Uber, Ola that we daily. Basically Two types of user in this
