--- a/index.html
+++ b/index.html
@@ -168,14 +168,14 @@
         </h3>
         <div class="w3-container">
             <h6><b>Programming Languages</b>: Python 3.x</h6>
-            <h6><b>Web Framework</b>: Django, Django-Rest-Framework, Django CMS</h6>
+            <h6><b>Web Framework</b>: Django, Django-Rest, Django CMS</h6>
             <h6><b>Web-Crawling Framework</b>: Scrapy</h6>
-            <h6><b>Databases</b>: Postgresql</h6>
+            <h6><b>Databases</b>: Postgres</h6>
             <h6><b>AWS</b>: S3, EC2</h6>
             <h6><b>Version Controlling Tool</b>:  Git</h6>
             <h6><b>API Doc & Testing</b>: Swagger,  Postman </h6>
-            <h6><b>Tools</b>:  Visual-Studio-Code, Pycharm</h6>
-            <h6><b>Operating Systems</b>:  Ubuntu [Prefer]</h6>
+            <h6><b>Tools</b>:  Visual-Studio-Code, Pycharm, Jupyter, Colab</h6>
+            <h6><b>Operating Systems</b>:  Ubuntu [Preferred]</h6>
             <br />
         </div>
       </div>
