all fixed up to date 29-08-2020

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="w3-container">
             <h6><b>Programming Languages</b>: Python 3.x</h6>
             <h6><b>Web Framework</b>: Django, Django-Rest, Django CMS</h6>
-            <h6><b>Web-Crawling Framework</b>: Scrapy</h6>
+            <h6><b>Web-Crawling Framework</b>: Scrapy, Selenium</h6>
             <h6><b>Databases</b>: Postgres</h6>
             <h6><b>AWS</b>: S3, EC2</h6>
             <h6><b>Version Controlling Tool</b>:  Git</h6>
@@ -243,7 +243,9 @@
         </div>
         <p align="center">
             <a href="education/edu.html" target="_blank" style="text-decoration:none">
-              <span style="color: teal">Eduction Details</span>
+              <span style="color: teal">
+                  <i class="fa fa-external-link fa-fw w3-margin-right"></i>Eduction Details
+              </span>
             </a>
         </p>
         <br />
