--- a/company/nat.html
+++ b/company/nat.html
@@ -33,11 +33,12 @@
                 <td>Postgres</td>
                 <td>
                     <p>
-                        This App is same like Uber, Ola that we daily. Basically Two types of user in this
-                        platform like: Driver, User, Admin. This whole Admin section is manage by Django. Like user
-                        management, Driver Management, Sub-admin management, Payment management, Booking
-                        Details, CMS with Filtering and sorting. New Driver registration process, Driver login process all
-                        the functionality is maintain with this app.
+                        This App is same like Uber, Ola that we use daily. Basically there are one super admin 
+                        and three types of user in this platform like: Driver, User, and Sub-Admin. 
+                        This whole Admin section is manage by Django. Like user management, 
+                        Driver Management, Sub-admin management, Payment management, Booking Details, CMS with 
+                        Filtering and sorting. New Driver registration process, Driver login process 
+                        all the functionality is maintain with this webapp.
                     </p>
                 </td>
             </tr>
