--- a/company/ets.html
+++ b/company/ets.html
@@ -33,14 +33,16 @@
                 <td>Postgres</td>
                 <td>
                     <p>
-                        This is an interactive platform where you can discuss the latest crypto trends and
-                        monitor all cryptocurrency markets streaming in real time. We show live streaming prices,
-                        charts and analysis from all of the top crypto. This made for giving update to their user about
-                        every detail on Crypto Coin. Here user can ask any question and make comment as well as
-                        react like dislike to the others questions & comments. From this site user can get all type of
-                        crypto related news, all ICO details. According to the user have chosen plan he will be able to
-                        access more features in this website. Admin can control everything from Admin panel. User can
-                        give feedback to Admin. Admin has full control on entire website data along with CMS.
+                        This is an interactive platform where you can discuss the latest 
+                        crypto trends and monitor all cryptocurrency markets streaming in real time. 
+                        We show live streaming prices, charts and analysis from all of the top crypto. 
+                        This made for giving update to their user about every detail on Crypto Coin. 
+                        Here user can put their questions and make comment as well as react 
+                        like dislike to the others questions & comments. 
+                        From this site user can get all type of crypto related news, all ICO details. 
+                        According to the user have chosen plan he will be able to access 
+                        more features in this website. User can give feedback and ratings. 
+                        Admin has full control on entire website data along with CMS.
                     </p>
                 </td>
             </tr>
@@ -52,16 +54,15 @@
                 <td>Postgres</td>
                 <td>
                     <p>
-                        It is a website which containing thousand of Videos which was developed by this
-                        Website owner. All this video has different category Admin can create category and upload
-                        video on this different category. Admin will upload this Video on his Vimeo account and shared
-                        this link and immediately this video will show into website. There is Different Plan for the User
-                        According to this plan User will get that type of facility. If User has a paid account in this VPS
-                        Website he can use the Embedded link of any video in his/her own website until the plan is
-                        expired. User can request to Admin for Customaries any video from his/her account but in this
-                        case user have to pay some amount of money. Now this whole website should be like an API /
-                        Plug-ins format so that we paid user can use this API/Plug-ins in WordPress, shopify, Wix
-                        platform as a template.
+                        It is a SAAS based website which containing thousands of Videos 
+                        which was developed by this Website owner. All this video has different 
+                        category Admin can create category and upload video on this different category. 
+                        Admin will upload this Video on his Vimeo account and shared this link and immediately 
+                        this video will show into website. There is Different Subscription type for the User 
+                        According to this plan User will get that type of facility. This is Multi tenancy  webapp. 
+                        This was developed by using Django-Tenant –Schema. So every subscriber also can upload 
+                        their own videos and mange own internal user. If User has a paid account in this VPS 
+                        Website then only user can use the embedded link of any video in his/her own website.
                     </p>
                 </td>
             </tr>
@@ -73,14 +74,17 @@
                 <td>Sqlite3</td>
                 <td>
                     <p>
-                        StartWriteIndia is one of the best kid’s handwriting software. In this project we
-                        have work on Fontography. We are fetching data from .TTF file which was made by Our
-                        Company. You can create practice sheets that focus students and children's specific needs and
-                        interests. After create practice sheet you need to download and print out sheets. With this
-                        application we can teach our kid how to write Cursive hand writing, where is staring point of
-                        every letter, by applying stoke arrow we can make them understand easily How to write every
-                        letter. We can add image on the sheet to make kid understand how to identify real life object.
-                        Actually we can create colorful amazing handwriting practice sheet for kid with this application.
+                        StartWriteIndia is one of the best kid’s handwriting software. 
+                        In this project we have work on Fontography. We are fetching data from.
+                        TTF file which was made by Client. You can create colourful practice sheets 
+                        as you want to guide your child or students. 
+                        After create practice sheet you need to download and print that sheets. 
+                        With this application we can teach our kid how to write Cursive hand writing, 
+                        where is staring point of every letter, by applying stoke arrow we can make 
+                        them understand easily How to write every letter because arrow comes with a 
+                        number so that students and child can understand which line should draw first. 
+                        We can add image on the sheet to make kid understand how to identify real life object. 
+                        Actually we can create colourful amazing handwriting practice sheet for kid with this application.
                     </p>
                 </td>
             </tr>
