--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
                 <li>
                     <h6>
                       <a href="https://pyworld.pythonanywhere.com" target="_blank" style="text-decoration:none">
-                        <span style="color: teal">My Profile <i class="fa fa-external-link fa-fw w3-margin-right"></i></span>
+                        <span style="color: teal">PyWorld <i class="fa fa-external-link fa-fw w3-margin-right"></i></span>
                       </a>
                     </h6>
                 </li>
                 <li>
                     <h6>
-                      <a href="https://pyworld.pythonanywhere.com" target="_blank" style="text-decoration:none">
-                        <span style="color: teal">PyWorld <i class="fa fa-external-link fa-fw w3-margin-right"></i></span>
+                      <a href="https://thepyuniverse.blogspot.com" target="_blank" style="text-decoration:none">
+                        <span style="color: teal">ThePyUniverse <i class="fa fa-external-link fa-fw w3-margin-right"></i></span>
                       </a>
                     </h6>
                 </li>
