--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
           <p class="w3-large"><b><i class="fa fa-heart fa-fw w3-margin-right w3-text-teal"></i>About Me</b></p>
               <blockquote>
-                  A Dedicated technical professional having <b style="color: black">2 Years 8 Months</b> of Informational
+                  A Dedicated technical professional having <b style="color: black">2 Years 10 Months</b> of Informational
                   Technology experience, committed to maintaining cutting edge technical skills and up-to-date industry
                   knowledge. Seeking a position to utilize my skill & abilities in industry that offers professional growth
                   while being resourceful innovative and flexible.
@@ -67,15 +67,8 @@
                 </li>
                 <li>
                     <h6>
-                      <a href="https://thepyuniverse.blogspot.com" target="_blank" style="text-decoration:none">
-                        <span style="color: teal">ThePyUniverse <i class="fa fa-external-link fa-fw w3-margin-right"></i></span>
-                      </a>
-                    </h6>
-                </li>
-                <li>
-                    <h6>
-                      <a href="gallery.html" target="_blank" style="text-decoration:none">
-                        <span style="color: teal">Portfolio <i class="fa fa-external-link fa-fw w3-margin-right"></i></span>
+                      <a href="https://the-python-world.blogspot.com/" target="_blank" style="text-decoration:none">
+                        <span style="color: teal">Python Blog <i class="fa fa-external-link fa-fw w3-margin-right"></i></span>
                       </a>
                     </h6>
                 </li>
@@ -168,13 +161,13 @@
         </h3>
         <div class="w3-container">
             <h6><b>Programming Languages</b>: Python 3.x</h6>
-            <h6><b>Web Framework</b>: Django, Django-Rest, Django CMS</h6>
+            <h6><b>Web Framework</b>: Django, Django-Rest</h6>
             <h6><b>Web-Crawling Framework</b>: Scrapy, Selenium</h6>
             <h6><b>Databases</b>: Postgres</h6>
             <h6><b>AWS</b>: S3, EC2</h6>
             <h6><b>Version Controlling Tool</b>:  Git</h6>
             <h6><b>API Doc & Testing</b>: Swagger,  Postman </h6>
-            <h6><b>Tools</b>:  Visual-Studio-Code, Pycharm, Jupyter, Colab</h6>
+            <h6><b>Tools</b>:  Visual-Studio-Code, Pycharm, Jupyter</h6>
             <h6><b>Operating Systems</b>:  Ubuntu [Preferred]</h6>
             <br />
         </div>
