--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="w3-third">
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="images/u2.jpg" style="width:100%" alt="Avatar">
+          <img src="images/IMG_5680.JPG" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2 style="color: black;">Kuntal Samanta</h2>
           </div>
