--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="w3-display-container">
           <img src="images/IMG_5680.JPG" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2 style="color: black;">Kuntal Samanta</h2>
+            <h2 style="color: white;">Kuntal Samanta</h2>
           </div>
         </div>
         <div class="w3-container">
