--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <h6><b>Web Framework</b>: Django, Django-Rest</h6>
             <h6><b>Web-Crawling Framework</b>: Scrapy, Selenium</h6>
             <h6><b>Databases</b>: Postgres</h6>
-            <h6><b>AWS</b>: S3, EC2</h6>
+            <h6><b>AWS</b>: S3</h6>
             <h6><b>Version Controlling Tool</b>:  Git</h6>
             <h6><b>API Doc & Testing</b>: Swagger,  Postman </h6>
             <h6><b>Tools</b>:  Visual-Studio-Code, Pycharm, Jupyter</h6>
