--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
           <p class="w3-large"><b><i class="fa fa-heart fa-fw w3-margin-right w3-text-teal"></i>About Me</b></p>
               <blockquote>
-                  A Dedicated technical professional having <b style="color: black">2 Years 10 Months</b> of Informational
+                  A Dedicated technical professional having <b style="color: black">3 Years 3 Months</b> of Informational
                   Technology experience, committed to maintaining cutting edge technical skills and up-to-date industry
                   knowledge. Seeking a position to utilize my skill & abilities in industry that offers professional growth
                   while being resourceful innovative and flexible.
@@ -161,11 +161,11 @@
         </h3>
         <div class="w3-container">
             <h6><b>Programming Languages</b>: Python 3.x</h6>
-            <h6><b>Web Framework</b>: Django, Django-Rest</h6>
+            <h6><b>Web Framework</b>: Django, Rest API, Multi Tenant(SAAS)</h6>
             <h6><b>Web-Crawling Framework</b>: Scrapy, Selenium</h6>
             <h6><b>Databases</b>: Postgres</h6>
             <h6><b>AWS</b>: S3</h6>
-            <h6><b>Version Controlling Tool</b>:  Git</h6>
+            <h6><b>Version Controlling Tool</b>:  Git, Github </h6>
             <h6><b>API Doc & Testing</b>: Swagger,  Postman </h6>
             <h6><b>Tools</b>:  Visual-Studio-Code, Pycharm, Jupyter</h6>
             <h6><b>Operating Systems</b>:  Ubuntu [Preferred]</h6>
@@ -179,7 +179,7 @@
           <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience
         </h3>
         <div class="w3-container">
-          <h4>Backend Developer at Capital Numbers Infotech Pvt Ltd</h4>
+          <h4>Software Engineer at Capital Numbers Infotech Pvt Ltd</h4>
           <h6 class="w3-text-teal">
             <i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2020 - <span class="w3-tag w3-teal w3-round">Current</span>
           </h6>
