--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
             </ol>
           <hr>
 
-          <p class="w3-large w3-text-theme"><b><i class="fa fa-download fa-fw w3-margin-right w3-text-teal"></i>Hire Me</b></p>
+<!--           <p class="w3-large w3-text-theme"><b><i class="fa fa-download fa-fw w3-margin-right w3-text-teal"></i>Hire Me</b></p>
           <p align="center">
               <button class="w3-teal">
-                <a href="doc/resume.pdf" target="_blank" style="text-decoration:none">Download Resume</a>
+                <a href="doc/contact.pdf" target="_blank" style="text-decoration:none">Download</a>
               </button>
           </p>
-          <hr>
+          <hr> -->
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-refresh fa-fw w3-margin-right w3-text-teal"></i>Follow Me</b></p>
             <p align="center">
@@ -161,11 +161,11 @@
         </h3>
         <div class="w3-container">
             <h6><b>Programming Languages</b>: Python 3.x</h6>
-            <h6><b>Web Framework</b>: Django, Rest API, Multi Tenant(SAAS)</h6>
+            <h6><b>Web Framework</b>: Django, Django-Rest-Framework, Django Multitenancy</h6>
             <h6><b>Web-Crawling Framework</b>: Scrapy, Selenium</h6>
             <h6><b>Databases</b>: Postgres</h6>
-            <h6><b>AWS</b>: S3</h6>
-            <h6><b>Version Controlling Tool</b>:  Git, Github </h6>
+            <h6><b>AWS</b>: IAM, RDS, S3, ELB, EC2, Route53 </h6>
+            <h6><b>Version Controlling Tool</b>:  Git </h6>
             <h6><b>API Doc & Testing</b>: Swagger,  Postman </h6>
             <h6><b>Tools</b>:  Visual-Studio-Code, Pycharm, Jupyter</h6>
             <h6><b>Operating Systems</b>:  Ubuntu [Preferred]</h6>
