--- a/company/nat.html
+++ b/company/nat.html
@@ -29,16 +29,15 @@
             <tr>
                 <td>1</td>
                 <td>YouTaxi Website APP Development</td>
-                <td>Python, Django, Django Rest</td>
+                <td>Python, Django, Rest, React Js</td>
                 <td>Postgres</td>
                 <td>
                     <p>
-                        This App is same like Uber, Ola that we use daily. Basically there are one super admin 
-                        and three types of user in this platform like: Driver, User, and Sub-Admin. 
-                        This whole Admin section is manage by Django. Like user management, 
-                        Driver Management, Sub-admin management, Payment management, Booking Details, CMS with 
-                        Filtering and sorting. New Driver registration process, Driver login process 
-                        all the functionality is maintain with this webapp.
+                        This App is same like Uber, Ola that we use very frequently. Basically there are one Super
+                        admin and three types of user in this platform like: Driver, User, and Sub-Admin. For user
+                        management, Driver Management, Sub-admin management, Payment management, Booking Details,
+                        CMS with Filtering and sorting, for every section frontend are created with React Js and as backend
+                        Django Rest API is using.
                     </p>
                 </td>
             </tr>
