--- a/company/cn.html
+++ b/company/cn.html
@@ -29,18 +29,17 @@
             <tr>
                 <td>1</td>
                 <td>FindMyNearest</td>
-                <td>Python, Django</td>
+                <td>Python, Django, Scrapy</td>
                 <td>Postgres</td>
                 <td>
                     <p>
-                        This is a features development scope website is already running and we have integrate the newly 
-                        developed app with the existing one. We need to created one feature for Realbuzz group which is 
-                        basically find the entire nearest gaming events around a user. From the scraping data we have 
-                        make those features. One another section is FMN partner can come to our website and registered 
-                        their events in our website so that their events reach to the more users. So this app is like a 
-                        breeze between user as well as company or organizers of events. Now when user will login and 
-                        search a race like 1k, 2k or marathon with a place name, they can see all the available events 
-                        near to that places.
+                        This is a new features development project from Realbuzz [realbuzz.com]. We are
+                        responsible for scrape the race information from their given listed website after that storing those
+                        information into their database. One another section is FMN partner can come to our website and
+                        registered their events in our website so that their events reach to the more users. So this app is like a
+                        breeze between user as well as company or with event’s organizers.
+                        Now when user will login and search a race like 1k, 2k or marathon with a place name, they can see all
+                        the available events near to those places.
                     </p>
                 </td>
             </tr>
@@ -48,24 +47,19 @@
             <tr>
                 <td>2</td>
                 <td>Brandcil Portal and Platform Development</td>
-                <td>Python, Django, Django Rest</td>
+                <td>Python, Django, Rest API</td>
                 <td>Postgres</td>
                 <td>
                     <p>
-                        Brandcil is a platform where User can post their content in Facebook, LinkedIn, Twitter at same 
-                        time by using brancil platform. Basically it is an Automatic and schedule posting platform without 
-                        any manual interaction at the time of posting. It is a Multi tenancy Application developed and
-                        maintained in python. User can select Package or Subscription plan; one new tenant will be created, 
-                        User will get everything in their registered email.  This Application has two part, 
-                        Superadmin and Subscriber. Superadmin can create package, plans and can mange sub-admin with permission, 
-                        can manage subscriber user account, CMS, Payment, site settings, Social Platform settings. 
-                        Subscriber/Tenant can Login with that account and create staff. User can upload Image or 
-                        video from their Local, Dropbox, Google drive, this media objects is being handle with S3 
-                        using boto3 package. User can delete any file at any time.  User can select those Image, 
-                        Video during posting into social media. People can schedule their post as they want brandcil 
-                        will post that content in social platform as user mentioned. User can create caption also for 
-                        future uses. CMS section is also there. Subscriber and Admin can see report and get CSV also 
-                        for their account. User can upgrade their plan too.
+                        For Brandcil [brandcil.com] we are responsible to develop a SAAS base social media
+                        management platform where if the User buy a subscription plan for their company or personal
+                        purpose they will able to manage all their social media account like Facebook, Twitter, LinkedIn.
+                        Subscriber can create user to manage their account on the behalf of that company or individual.
+                        Subscriber or user under subscriber can post the same content in Facebook, LinkedIn, Twitter at same
+                        time by using Brancil.com platform just with a single click. Post can be schedule as well for posting in
+                        a future time. Subscriber/Tenant can upload Image or video from their Local, Dropbox, Google drive,
+                        this media objects is being handle with S3 using boto3 package. User can select those Image, Video
+                        during posting into social media.
                     </p>
                 </td>
             </tr>
@@ -77,11 +71,26 @@
                 <td>Postgres</td>
                 <td>
                     <p>
-                        This is simply a scraping Project where we need to scrape LinkedIn user 
-                        profile data like: Name, Current Company, Job Title, Last Education details. 
-                        Basically object of project we need to validate user data from user LinkedIn profile url. 
-                        Client has given us one .xlsx file which contains user LinkedIn profile url and user data.
-                        First we need to scrape those user data then we need to validate those data with .xlsx data.
+                        This is simply a scraping Project where we need to scrape LinkedIn user profile data like:
+                        Name, Current Company, Job Title, Last Education details.
+                        Basically object of project we need to validate user data from user LinkedIn profile url. Client has
+                        given us one .xlsx file which contains user LinkedIn profile url and user data. First we need to scrape
+                        those user data then we need to validate those data with .xlsx data.
+                    </p>
+                </td>
+            </tr>
+            
+            <tr>
+                <td>4</td>
+                <td>USSD Application for Kasha </td>
+                <td>Python, Django, ussd-airflow</td>
+                <td>Postgres</td>
+                <td>
+                    <p>
+                        Kasha [kasha.co] is one most popular E-commerce company for woman health care. So
+                        we are responsible for developing the entire buying, agent management, user management flow
+                        through USSD so that those who does have Smartphone they also can buy the product and “Kasha”
+                        don’t lose any customer. 
                     </p>
                 </td>
             </tr>
