my website updated

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="w3-third">
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="images/DSC_0314.JPG" style="width:100%" alt="Avatar">
+          <img src="images/profile_image.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2 style="color: white;">Kuntal Samanta</h2>
           </div>
@@ -185,7 +185,7 @@
           </h6>
           <p>
               <a href="company/cn.html" target="_blank" style="text-decoration:none">
-                <span style="color: teal"><i class="fa fa-external-link fa-fw w3-margin-right"></i>Participation</span>
+                <span style="color: teal"><i class="fa fa-external-link fa-fw w3-margin-right"></i>Details</span>
               </a>
           </p>
           <hr>
@@ -195,7 +195,7 @@
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2019 - Feb 2020</h6>
             <p>
                 <a href="company/nat.html" target="_blank" style="text-decoration:none">
-                  <span style="color: teal"><i class="fa fa-external-link fa-fw w3-margin-right"></i>Participation</span>
+                  <span style="color: teal"><i class="fa fa-external-link fa-fw w3-margin-right"></i>Details</span>
                 </a>
             </p>
           <hr>
@@ -205,7 +205,7 @@
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2017 - Nov 2019</h6>
             <p>
                 <a href="company/ets.html" target="_blank" style="text-decoration:none">
-                  <span style="color: teal"><i class="fa fa-external-link fa-fw w3-margin-right"></i>Participation</span>
+                  <span style="color: teal"><i class="fa fa-external-link fa-fw w3-margin-right"></i>Details</span>
                 </a>
             </p>
           <br />
