--- a/index.html
+++ b/index.html
@@ -261,7 +261,14 @@
           <h6><b>5.</b> &nbsp; Coordinator of Bluetooth Robotics (IOT) training workshop at College Of Engineering & Management</h6>
           <br />
         </div>
-
+	<p align="center">
+	    <a href="https://kuntalsamantaportfolio.blogspot.com/" target="_blank" style="text-decoration:none">
+	      <span style="color: teal">
+		  <i class="fa fa-external-link fa-fw w3-margin-right"></i>Achievements/certification Details
+	      </span>
+	    </a>
+	</p>
+	<br />
       </div>
 
       <br />
