--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
           <p class="w3-large"><b><i class="fa fa-heart fa-fw w3-margin-right w3-text-teal"></i>About Me</b></p>
               <blockquote>
-                  A Dedicated technical professional having <b style="color: black">3 Years 3 Months</b> of Informational
+                  A Dedicated professional of Informational
                   Technology experience, committed to maintaining cutting edge technical skills and up-to-date industry
                   knowledge. Seeking a position to utilize my skill & abilities in industry that offers professional growth
                   while being resourceful innovative and flexible.
@@ -93,7 +93,7 @@
                     <i class="fa fa-bitbucket w3-hover-opacity"></i>
                 </a>
                 &nbsp;&nbsp;
-                <a href="https://www.linkedin.com/in/kuntal-samanta-python" target="_blank">
+                <a href="https://www.linkedin.com/in/kuntal-python-django" target="_blank">
                     <i class="fa fa-linkedin w3-hover-opacity"></i>
                 </a>
                 &nbsp;&nbsp;
