--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2020 - <span class="w3-tag w3-teal w3-round">Current</span>
           </h6>
           <p>
-              <a href="company/cn.html" target="_blank" style="text-decoration:none">
+              <a href="company/demo.html" target="_blank" style="text-decoration:none">
                 <span style="color: teal"><i class="fa fa-external-link fa-fw w3-margin-right"></i>Details</span>
               </a>
           </p>
@@ -194,7 +194,7 @@
             <h4>Full Stack Developer at NatIt Solved Pvt Ltd</h4>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2019 - Feb 2020</h6>
             <p>
-                <a href="company/nat.html" target="_blank" style="text-decoration:none">
+                <a href="company/demo.html" target="_blank" style="text-decoration:none">
                   <span style="color: teal"><i class="fa fa-external-link fa-fw w3-margin-right"></i>Details</span>
                 </a>
             </p>
@@ -204,7 +204,7 @@
             <h4>Software Engineer at Eclipse Technoconsulting Global Pvt Ltd</h4>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2017 - Nov 2019</h6>
             <p>
-                <a href="company/ets.html" target="_blank" style="text-decoration:none">
+                <a href="company/demo.html" target="_blank" style="text-decoration:none">
                   <span style="color: teal"><i class="fa fa-external-link fa-fw w3-margin-right"></i>Details</span>
                 </a>
             </p>
