--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
                 <li>
                     <p>Django</p>
                 </li>
+		 <li>
+                    <p>ML</p>
+                </li>
+		 <li>
+                    <p>AWS</p>
+                </li>
             </ol>
           <hr>
 
@@ -87,10 +93,6 @@
             <p align="center">
                 <a href="https://github.com/kuntal-python-django" target="_blank">
                     <i class="fa fa-github w3-hover-opacity"></i>
-                </a>
-                &nbsp;&nbsp;
-                <a href="https://bitbucket.org/kuntal-python-django" target="_blank">
-                    <i class="fa fa-bitbucket w3-hover-opacity"></i>
                 </a>
                 &nbsp;&nbsp;
                 <a href="https://www.linkedin.com/in/kuntal-python-django" target="_blank">
@@ -162,13 +164,14 @@
         <div class="w3-container">
             <h6><b>Programming Languages</b>: Python 3.x</h6>
             <h6><b>Web Framework</b>: Django, Django-Rest-Framework, Django Multitenancy</h6>
+	    <h6><b>Industry Knowledge</b>: ML</h6>
+	    <h6><b>AWS</b>: IAM, RDS, S3, ELB, EC2, Route53 </h6>
             <h6><b>Web-Crawling Framework</b>: Scrapy, Selenium</h6>
             <h6><b>Databases</b>: Postgres</h6>
-            <h6><b>AWS</b>: IAM, RDS, S3, ELB, EC2, Route53 </h6>
             <h6><b>Version Controlling Tool</b>:  Git </h6>
             <h6><b>API Doc & Testing</b>: Swagger,  Postman </h6>
-            <h6><b>Tools</b>:  Visual-Studio-Code, Pycharm, Jupyter</h6>
-            <h6><b>Operating Systems</b>:  Ubuntu [Preferred]</h6>
+            <h6><b>Tools</b>:  Visual-Studio-Code, Pycharm, Jupyter, Google Colaboratory</h6>
+            <h6><b>Operating Systems</b>:  Ubuntu or Mac</h6>
             <br />
         </div>
       </div>
