--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <link rel="icon" href="images/icon.ico">
-    <title>Kuntal Samanta - Python, Django Professional</title>
+    <title>Kuntal Samanta - IT Professional</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -27,7 +27,7 @@
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Python, Django Professional</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Python, Django, ML, AWS Professional</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>West Bengal, India</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>kuntal.samanta.jobs@gmail.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+91 7407501378</p>
@@ -55,10 +55,7 @@
               <blockquote>
                   A Dedicated professional of Informational
                   Technology experience, committed to maintaining cutting edge technical skills and up-to-date industry
-                  knowledge. Seeking a position to utilize my skill & abilities in industry that offers professional growth
-                  while being resourceful innovative and flexible.
-                  Displayed and proved the capability to learn any new technology and work on it in a matter of a few
-                  days
+                  knowledge.
               </blockquote>
           <hr>
 
@@ -164,7 +161,7 @@
         <div class="w3-container">
             <h6><b>Programming Languages</b>: Python 3.x</h6>
             <h6><b>Web Framework</b>: Django, Django-Rest-Framework, Django Multitenancy</h6>
-	    <h6><b>Industry Knowledge</b>: ML</h6>
+	    <h6><b>Industry Knowledge</b>: Machine Learning</h6>
 	    <h6><b>AWS</b>: IAM, RDS, S3, ELB, EC2, Route53 </h6>
             <h6><b>Web-Crawling Framework</b>: Scrapy, Selenium</h6>
             <h6><b>Databases</b>: Postgres</h6>
